--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello!</title>
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body>
     <h1>Hello! chao ae</h1>
+    <img src="/images/nodejsimage1.png" width="400" height="400">
 </body>
 
 </html>
