--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Hello! chao ae</h1>
-    <img src="/images/nodejsimage1.png" width="400" height="400">
+    <img src="/images/nodejsimage1.png">
 </body>
 
 </html>
